fixed alignment of social icons

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -27,8 +27,10 @@
   }
 
   img {
+    float: left;
     width: 18px;
     height: 18px;
+    margin: 0 4px 0 0;
     vertical-align: middle;
   }
 }
